<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_cloud_download_24"
            android:contentDescription="@string/app_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textAppearance="@style/Base.Widget.AppCompat.TextView.Title" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioButton
            android:id="@+id/rbGlide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/selection_glide"
            android:textAppearance="@style/Base.Widget.AppCompat.CompoundButton.RadioButton.StyledRadioButton" />

        <RadioButton
            android:id="@+id/rbApp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/selection_app"
            android:textAppearance="@style/Base.Widget.AppCompat.CompoundButton.RadioButton.StyledRadioButton" />

        <RadioButton
            android:id="@+id/rbRetrofit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selection_retrofit"
            android:textAppearance="@style/Base.Widget.AppCompat.CompoundButton.RadioButton.StyledRadioButton" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_large"
        app:buttonBackgroundColor="@color/colorAccent"
        app:buttonProgressColor="@color/colorPrimaryDark"
        app:buttonProgressColor2="@color/white"
        app:buttonTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>